se agrego testing con jest

--- a/part-4/blogs/package.json
+++ b/part-4/blogs/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "eslint": "^8.51.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
 }
