--- a/part-4/study/package.json
+++ b/part-4/study/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.51.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "mongoose-unique-validator": "^4.0.0",
     "morgan": "^1.10.0"
